Closed Bug 111405 Opened 23 years ago Closed 23 years ago

crash if line-height property defined in userContent.css M096 [@ nsRuleNode::ComputeTextData]

Categories

(Core :: CSS Parsing and Computation, defect, P1)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.7

People

(Reporter: junya, Assigned: dbaron)

References

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(5 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.6) Gecko/20011120 BuildID: 2001112009 If "line-height" property defined in "userContent.css" then Mozilla crashes then redering simply HTML that has one TABLE element and one TEXTAREA element. userContent.css ---------------------------------------- * { line-height:120%; } -------------------------------------------------------- simply.html -------------------------------------------- <TABLE> <TBODY> <TR> <TD> <TEXTAREA name="text" rows="10" cols="60"></TEXTAREA> </TD> </TR> </TBODY> </TABLE> -------------------------------------------------------- Reproducible: Always Steps to Reproduce: 1.Add "* { line-height:120%; }" in userContent.css 2.Run Mozilla 3.Open simply.html 4.Crashes Actual Results: Mozilla crashes. Expected Results: Rendering one TABLE and one TEXTAREA form.
Confirmed. BuildID: 2001112104 (Win98). the sample miss a <link rel="stylesheet" type="text/css" href="userContent.css" /> attaching a right one.
Attached file testcase (html)
Attached file testcase (css)
After a bit more work, i find that the prob is due to line-height applied to a <TABLE ..> containing a textarea. <TABLE STYLE="line-height:120%;"><TR><TD> <TEXTAREA name="text" rows="10" cols="60"></TEXTAREA> </TD></TR></TABLE>
Attached file Second testcase
Sev: normail --> critical Key: +crash TB38365087W with 2001112104/WinNT4
Severity: normal → critical
Keywords: crash
confirming with http://bugzilla.mozilla.org/showattachment.cgi?attach_id=58848 and win2k build 20011120..
Assignee: asa → dbaron
Status: UNCONFIRMED → NEW
Component: Browser-General → Style System
Ever confirmed: true
QA Contact: doronr → ian
Summary: crash if line-height property defined in userContent.css → crash if line-height property defined in userContent.css [@ nsRuleNode::ComputeTextData]
Attached file Stack trace
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla0.9.7
The problem was that I was computing percentage line heights relative to the parent's font size rather than the font size of the element itself. Once I fix that, there's no need to worry about a null check.
Comment on attachment 59118 [details] [diff] [review] patch r=pierre
Attachment #59118 - Flags: review+
sr=hyatt
Fix checked in 2001-11-27 20:35 PDT.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 112787 has been marked as a duplicate of this bug. ***
Adding M096 and topcrash keyword for tracking...this was a topcrasher with Mozilla 0.9.6.
Keywords: topcrash
Summary: crash if line-height property defined in userContent.css [@ nsRuleNode::ComputeTextData] → crash if line-height property defined in userContent.css M096 [@ nsRuleNode::ComputeTextData]
verified fixed on buildid :2002-04-22-1.0.0 branch
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsRuleNode::ComputeTextData]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: