Fix crash and incorrect calculation of percentage line-height by computing relative to self's font-size rather than parent's font size.  r=pierre  sr=hyatt  b=111405